--- a/src/android/build-extras.gradle
+++ b/src/android/build-extras.gradle
@@ -102,5 +102,5 @@ android.buildTypes.each {
 }
 
 dependencies {
-    // compile 'com.nimbusds:nimbus-jose-jwt:5.1'
+    compile 'com.nimbusds:nimbus-jose-jwt:5.1'
 }
