--- a/src/android/build-extras.gradle
+++ b/src/android/build-extras.gradle
@@ -104,3 +104,5 @@ android.buildTypes.each {
 dependencies {
     compile 'com.nimbusds:nimbus-jose-jwt:5.1'
 }
+
+googleServices { disableVersionCheck = false }
