--- a/src/android/build-extras.gradle
+++ b/src/android/build-extras.gradle
@@ -113,6 +113,6 @@ allprojects {
     }
 
     dependencies {
-        implementation 'com.github.EvanWieland:nimbus-jose-jwt:master'
+        implementation 'com.github.EvanWieland:nimbus-jose-jwt:8.4'
     }
 }
