--- a/src/android/build-extras.gradle
+++ b/src/android/build-extras.gradle
@@ -29,7 +29,7 @@ cdvPluginPostBuildExtras.add({
    }
 
    dependencies {
-     implementation 'com.github.EvanWieland:nimbus-jose-jwt:8.5'
+     compile 'com.github.EvanWieland:nimbus-jose-jwt:8.5'
    }
  }
  
