--- a/src/android/build-extras.gradle
+++ b/src/android/build-extras.gradle
@@ -30,7 +30,7 @@ cdvPluginPostBuildExtras.add({
    }
 
    dependencies {
-    // compile 'com.github.EvanWieland:nimbus-jose-jwt:8.5'
+    compile 'com.github.EvanWieland:nimbus-jose-jwt:8.5'
    }
  }
  
